changed calculations to metric system

--- a/beginner/BMI_calculator.ipynb
+++ b/beginner/BMI_calculator.ipynb
@@ -20,18 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your BMI is 27\n",
-      "Uh-oh, it looks like you're carrying some extra weight, yt. Try incorporating more physical activity into your daily routine to help manage your weight and reduce your risk of health problems.\n",
-      "Your BMR is 1820\n",
-      "Based on your inputs, your Total Daily Energy Expenditure (TDEE) is  2821 calories per day.\n",
-      "Based on your weight status and activity level, your recommended daily calorie intake is 2321 calories per day.\n"
+      "Your BMI is 19\n",
+      "Congratulations, ma, you're in the normal weight range! Keep up the good work with your healthy lifestyle choices.\n",
+      "Your BMR is 1400\n",
+      "Based on your inputs, your Total Daily Energy Expenditure (TDEE) is  1924 calories per day.\n",
+      "Based on your weight status and activity level, your recommended daily calorie intake is 1924 calories per day.\n"
      ]
     }
    ],
@@ -44,9 +44,9 @@
     "\n",
     "age = int(input('Enter your age:')) #Change input to an integer because it would be saved as a string\n",
     "\n",
-    "weight = int(input('Enter your weight in pounds: ')) #Change input to an integer because it would be saved as a string\n",
+    "weight = float(input('Enter your weight in kilograms: ')) #Change input to an float because it would be saved as a string\n",
     "\n",
-    "height = int(input('Enter your height in inches: ')) #Change input to an integer because it would be saved as a string\n",
+    "height = float(input('Enter your height in centimeters: ')) #Change input to an float because it would be saved as a string\n",
     "\n",
     "sex = input('Enter your sex (Male or Female):')\n",
     "\n",
@@ -54,7 +54,7 @@
     "# Formula for calculating the BMI\n",
     "# Where the weight is in pounds and the height is in inches\n",
     "\n",
-    "BMI = (weight * 703) / (height * height)\n",
+    "BMI = (weight  / height  / height ) * 10000\n",
     "\n",
     "print(\"Your BMI is\", + round(BMI))\n",
     "\n",
@@ -78,9 +78,10 @@
     "\n",
     "# Calculate the user's BMR using the Harris-Benedict equation\n",
     "if sex == 'Male':\n",
-    "    BMR = 66 + (6.2 * weight) + (12.7 * height) - (6.76 * age)\n",
+    "    BMR = 88.362 + (13.397 * weight) + (4.799 * height) - (5.677 * age)\n",
     "elif sex == 'Female':\n",
-    "    BMR = 655.1 + (4.35 * weight) + (4.7 * height) - (4.7 * age)\n",
+    "    BMR = 447.593 + (9.247 * weight) + (3.098 * height) - (4.330 * age)\n",
+    "\n",
     "else:\n",
     "    print(\"Oops! It looks like you may have entered invalid input, \" + name + \". Please double-check your input and try again.\")\n",
     "\n",
